添加Product项目并kapt迁移ksp

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -247,4 +247,14 @@
     <string name="currency_symbol">$</string>
     <string name="edit_item">Edit Item</string>
     <string name="add_new_item">Add new item</string>
+
+
+    <string name="no_comments">No comments</string>
+    <string name="loading_comments">Loading comments…</string>
+    <string name="loading_products">Loading products…</string>
+    <string name="search_products_hint">Search Products…</string>
+    <string name="cd_products_list">Products list</string>
+    <string name="cd_comments_list">Comments list</string>
+    <string name="cd_product_name">Name of the product</string>
+    <string name="cd_search_products">Search products</string>
 </resources>
