--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -91,9 +91,10 @@
         shadows and rounded corners.
         \n\nTo create a card with a shadow, use the <font fgcolor="#FFFFFFFF">android:elevation</font>
         attribute.
-        \n\nTo set the corner radius in your layouts, use the <font
-            fgcolor="#FFFFFFFF">card_view:cardCornerRadius</font> attribute.
+        \n\nTo set the corner radius in your layouts, use the <font fgcolor="#FFFFFFFF">card_view:cardCornerRadius</font> attribute.
     </string>
     <string name="cardview_radius_seekbar_text">Radius</string>
     <string name="cardview_elevation_seekbar_text">Elevation</string>
+    <string name="privacy_content">This is a CardView widget %1$s . CardView widgets can have shadows and rounded corners.</string>
+    <string name="privacy_click">shadows and rounded corners</string>
 </resources>
