--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">JetpackSample</string>
+    <string name="app_name">JetpackSample2</string>
 
     <string name="select_an_avatar">Select an Avatar</string>
     <string name="name">Name</string>
